--- a/DEFNLP_Pipeline.ipynb
+++ b/DEFNLP_Pipeline.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,9 +49,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\mtala\\Desktop\\DEFNLP\\venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -94,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +110,7 @@
      "output_type": "stream",
      "text": [
       "✓ Configuration loaded\n",
-      "  GPU Available: True\n",
+      "  GPU Available: False\n",
       "  QA Model: salti/bert-base-multilingual-cased-finetuned-squad\n",
       "  SpaCy Model: en_core_web_sm\n"
      ]
@@ -184,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -785,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -796,7 +804,7 @@
       "============================================================\n",
       "INITIALIZING DEFNLP PIPELINE\n",
       "============================================================\n",
-      "Note: External datasets file /content/big_gov_datasets.txt not found (optional)\n",
+      "Note: External datasets file c:\\Users\\mtala\\Desktop\\DEFNLP\\big_gov_datasets.txt not found (optional)\n",
       "Loading SpaCy model...\n",
       "Loading BERT QA model...\n"
      ]
@@ -805,7 +813,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Device set to use cuda:0\n"
+      "Device set to use cpu\n"
      ]
     },
     {
@@ -826,18 +834,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'c:\\\\Users\\\\mtala\\\\Desktop\\\\DEFNLP'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipython-input-2025524018.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Change to the notebook directory\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mnotebook_dir\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34mr'c:\\Users\\mtala\\Desktop\\DEFNLP'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnotebook_dir\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;31m# Verify the files exist\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'c:\\\\Users\\\\mtala\\\\Desktop\\\\DEFNLP'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current directory: C:\\Users\\mtala\\Desktop\\DEFNLP\n",
+      "test.csv exists: True\n",
+      "train.csv exists: True\n",
+      "test directory exists: True\n",
+      "train directory exists: True\n"
      ]
     }
    ],
@@ -846,7 +854,7 @@
     "import os\n",
     "\n",
     "# Change to the notebook directory\n",
-    "notebook_dir = r'C:\\Users\\mtala\\Desktop\\DEFNLP'\n",
+    "notebook_dir = r'C:/Users/mtala/Desktop/DEFNLP'\n",
     "os.chdir(notebook_dir)\n",
     "\n",
     "# Verify the files exist\n",
@@ -859,9 +867,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "============================================================\n",
+      "RUNNING DEFNLP INFERENCE\n",
+      "============================================================\n",
+      "\n",
+      "============================================================\n",
+      "PHASE I: DATA CLEANING & BASELINE MODELING\n",
+      "============================================================\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading c:\\Users\\mtala\\Desktop\\DEFNLP\\test: 100%|██████████| 4/4 [00:00<00:00, 179.98it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cleaning text...\n",
+      "Created 179 internal dataset labels\n",
+      "Performing baseline matching...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Phase I: 100%|██████████| 4/4 [00:00<00:00, 185.71it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ Phase I complete\n",
+      "\n",
+      "============================================================\n",
+      "PHASE II: SPACY NER & BERT QA MODELING\n",
+      "============================================================\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Phase II: 100%|██████████| 4/4 [04:41<00:00, 70.39s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ Phase II complete\n",
+      "\n",
+      "============================================================\n",
+      "PHASE III: ACRONYM & ABBREVIATION EXTRACTION\n",
+      "============================================================\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Phase III: 100%|██████████| 4/4 [00:00<00:00, 107.07it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ Phase III complete\n",
+      "\n",
+      "============================================================\n",
+      "MERGING ALL PHASE PREDICTIONS\n",
+      "============================================================\n",
+      "✓ Merged predictions for 4 publications\n",
+      "\n",
+      "============================================================\n",
+      "✓ INFERENCE COMPLETE\n",
+      "============================================================\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Run inference\n",
     "predictions = pipeline.run_inference()"
@@ -869,9 +974,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "✓ Predictions saved to c:\\Users\\mtala\\Desktop\\DEFNLP\\output\\predictions1.csv\n"
+     ]
+    }
+   ],
    "source": [
     "# Save predictions\n",
     "os.makedirs(OUTPUT_DIR, exist_ok=True)\n",
@@ -891,9 +1005,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "First 10 predictions:\n",
+      "================================================================================\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Id</th>\n",
+       "      <th>PredictionString</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2100032a-7c33-4bff-97ef-690822c43466</td>\n",
+       "      <td>.007 | 1000 | 1000 genomes | 1000 genomes ceu)...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2f392438-e215-4169-bebf-21ac4ff253e1</td>\n",
+       "      <td>(ages 25 to 34 | 0 (preprimary education), 1 (...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3f316b38-1a24-45a9-8d8c-4e05a42257c6</td>\n",
+       "      <td>10, 25 | 16 | 180 | 1800s | 1871 | 1874 | 1937...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>8e6996b4-ca08-4c0b-bed2-aaf07a4c6a60</td>\n",
+       "      <td>12 categories and sub-categories | 18 years or...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                     Id  \\\n",
+       "0  2100032a-7c33-4bff-97ef-690822c43466   \n",
+       "1  2f392438-e215-4169-bebf-21ac4ff253e1   \n",
+       "2  3f316b38-1a24-45a9-8d8c-4e05a42257c6   \n",
+       "3  8e6996b4-ca08-4c0b-bed2-aaf07a4c6a60   \n",
+       "\n",
+       "                                    PredictionString  \n",
+       "0  .007 | 1000 | 1000 genomes | 1000 genomes ceu)...  \n",
+       "1  (ages 25 to 34 | 0 (preprimary education), 1 (...  \n",
+       "2  10, 25 | 16 | 180 | 1800s | 1871 | 1874 | 1937...  \n",
+       "3  12 categories and sub-categories | 18 years or...  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Display first few predictions\n",
     "print(\"\\nFirst 10 predictions:\")\n",
@@ -903,9 +1095,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Prediction Statistics:\n",
+      "================================================================================\n",
+      "Total publications: 4\n",
+      "Publications with predictions: 4\n",
+      "Publications without predictions: 0\n",
+      "Average datasets per publication: 302.00\n"
+     ]
+    }
+   ],
    "source": [
     "# Statistics\n",
     "print(\"\\nPrediction Statistics:\")\n",
@@ -923,9 +1129,156 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Sample prediction with details:\n",
+      "================================================================================\n",
+      "Publication ID: 2100032a-7c33-4bff-97ef-690822c43466\n",
+      "\n",
+      "Extracted datasets:\n",
+      "  1. .007\n",
+      "  2. 1000\n",
+      "  3. 1000 genomes\n",
+      "  4. 1000 genomes ceu)\n",
+      "  5. 106k participants\n",
+      "  6. 15,000 independent subjects with neurocognitive and gwas data for analysis\n",
+      "  7. 1936\n",
+      "  8. 1993\n",
+      "  9. 1997\n",
+      "  10. 2004\n",
+      "  11. 2007\n",
+      "  12. 2008\n",
+      "  13. 2009\n",
+      "  14. 2010\n",
+      "  15. 2011\n",
+      "  16. 2012\n",
+      "  17. 2013\n",
+      "  18. 2014\n",
+      "  19. 2014a\n",
+      "  20. 2014b\n",
+      "  21. 2015\n",
+      "  22. 21 cogent datasets\n",
+      "  23. 40 years of age or older\n",
+      "  24. 905 in 1000 genomes ceu)\n",
+      "  25. adni\n",
+      "  26. affymetrix\n",
+      "  27. age 11\n",
+      "  28. age 40\n",
+      "  29. all 21 cogent datasets\n",
+      "  30. approximately 18 years of age\n",
+      "  31. approximately 70 years\n",
+      "  32. attempts to pinpoint loci associated with human cognition\n",
+      "  33. brainspan\n",
+      "  34. cardiovascular health study\n",
+      "  35. cardiovascular health study chs\n",
+      "  36. carroll\n",
+      "  37. caucasian of european ancestry\n",
+      "  38. ceu\n",
+      "  39. charge\n",
+      "  40. chs\n",
+      "  41. cogent\n",
+      "  42. cogent samples were fully independent from both the ssgac and the charge samples\n",
+      "  43. cogent samples were genotyped on commercial illumina or affymetrix genome-wide snp\n",
+      "  44. cogent1 gwas\n",
+      "  45. cogent1 gwas 905 in 1000 genomes ceu\n",
+      "  46. cogent1 gwas 905 in 1000 genomes ceu)\n",
+      "  47. cogent2\n",
+      "  48. cogent2 ) has resulted in the acquisition of 15,000 independent subjects with neurocognitive and gwas data for analysis\n",
+      "  49. cognitive genomics consortium\n",
+      "  50. cognitive genomics consortium cogent\n",
+      "  51. davies\n",
+      "  52. disease neuroimaging initiative\n",
+      "  53. disease neuroimaging initiative adni\n",
+      "  54. dnase\n",
+      "  55. fhs\n",
+      "  56. fhs and ncng removed since these studies were part of the cohorts for heart and aging research in genomic epidemiology\n",
+      "  57. fhs and ncng removed since these studies were part of the cohorts for heart and aging research in genomic epidemiology charge\n",
+      "  58. five datasets\n",
+      "  59. framingham heart study\n",
+      "  60. framingham heart study, second generation cohort (fhs) sample, the cardiovascular health study (chs) sample, and the norwegian cognitive neurogenetics (ncng) sample\n",
+      "  61. g factor data\n",
+      "  62. gcta\n",
+      "  63. gcta has implemented a mixed-linear-model association\n",
+      "  64. gcta has implemented a mixed-linear-model association mlma\n",
+      "  65. genetic locus associated with cognitive function and education\n",
+      "  66. genetics\n",
+      "  67. genetics ping\n",
+      "  68. genomes project\n",
+      "  69. gwas\n",
+      "  70. gwas and neurocognitive data\n",
+      "  71. gwas data for analysis\n",
+      "  72. hbcs\n",
+      "  73. howie et al , and gcta\n",
+      "  74. id\n",
+      "  75. impute2\n",
+      "  76. independent, large-scale collection of cohorts\n",
+      "  77. june 2014\n",
+      "  78. kdp\n",
+      "  79. kernel density plot\n",
+      "  80. kernel density plot kdp\n",
+      "  81. large-scale\n",
+      "  82. large-scale dataset\n",
+      "  83. ld\n",
+      "  84. lothian birth cohort study\n",
+      "  85. mds\n",
+      "  86. microarrays\n",
+      "  87. mlma\n",
+      "  88. ncng\n",
+      "  89. neurocognitive\n",
+      "  90. neurocognitive and gwas\n",
+      "  91. neurocognitive and gwas data for analysis\n",
+      "  92. neurocognitive data\n",
+      "  93. neurocognitive studies\n",
+      "  94. none of the three snps\n",
+      "  95. none of the three snps previously associated with education were variants included on commercially available microarrays, and thus were imputed into their datasets , 2013) cogent2 samples that did not have genotypes for the snps of interest\n",
+      "  96. norwegian cognitive neurogenetics\n",
+      "  97. norwegian cognitive neurogenetics ncng\n",
+      "  98. panizzon\n",
+      "  99. pediatric imaging, neurocognition, and genetics\n",
+      "  100. ping\n",
+      "  101. publicly available datasets\n",
+      "  102. publicly available datasets were included we kindly thank the investigative teams and staffs of the pediatric imaging, neurocognition, and genetics (ping) study, the alzheimer s disease neuroimaging initiative (adni) project\n",
+      "  103. pubmed central\n",
+      "  104. qc\n",
+      "  105. qtl\n",
+      "  106. rs1906252 and g\n",
+      "  107. rs4851266\n",
+      "  108. rs77910749\n",
+      "  109. second generation cohort\n",
+      "  110. second generation cohort fhs\n",
+      "  111. several publicly available datasets\n",
+      "  112. snp\n",
+      "  113. ssgac\n",
+      "  114. stage 1\n",
+      "  115. standard gwas quality control\n",
+      "  116. standard gwas quality control (qc)\n",
+      "  117. standard gwas quality control qc\n",
+      "  118. supplementary information\n",
+      "  119. tests missing for more than 5 of the sample in an individual study were excluded all cogent samples\n",
+      "  120. the cardiovascular health study\n",
+      "  121. the childhood intelligence consortium\n",
+      "  122. the cognitive genomics consortium\n",
+      "  123. the laboratory for neuro imaging\n",
+      "  124. the norwegian cognitive neurogenetics\n",
+      "  125. the pediatric imaging,\n",
+      "  126. the social science genetic association consortium\n",
+      "  127. the social science genetic association consortium ssgac\n",
+      "  128. the top 69 snps\n",
+      "  129. the university of southern california\n",
+      "  130. top 69 snps\n",
+      "  131. under 40 years of age\n",
+      "  132. ward\n",
+      "  133. wood et al, 2014\n",
+      "  134. years\n"
+     ]
+    }
+   ],
    "source": [
     "# Sample predictions with details\n",
     "print(\"\\nSample prediction with details:\")\n",
@@ -975,7 +1328,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -989,7 +1342,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.12"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
